--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,16 @@
     padding: 0;
     font-family: Arial, sans-serif;
   }
+  ul{
+    display: flex;
+    justify-content: center;
+    align-items:center ;
+  }
   
   #navbar {
     position: fixed;
     top: 0;
+    height: 50px;
     width: 100%;
     background-color: #333;
     color: #fff;
@@ -22,7 +28,7 @@
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
   }
   
   #navbar li {
@@ -46,7 +52,7 @@
   }
   
   #welcome-section {
-    height: 100vh;
+    height: 70vh;
     background-color: #f2f2f2;
     display: flex;
     justify-content: center;
@@ -60,16 +66,28 @@
   
   #projects {
     padding: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-top: 5px;
   }
   
   .project-tile {
     background-color: #fff;
     padding: 20px;
+    width: 250px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    border: 1px solid black;
+    transition: all 1s;
+
   }
   
+  .project-tile:hover{
+    transform: scale(1.1);
+  }
+
   .project-tile h2 {
     font-size: 24px;
     margin-bottom: 10px;
